# smart-fcu-sim

./: .env  .env.production  .gitignore  AGENTS.md  README.md  docker-compose.yml  package.json
backend/: Dockerfile  main.py  pyproject.toml
backend/app/: __init__.py  config.py  database.py  main.py
backend/app/models/: __init__.py  device.py  prediction.py  sensor.py  zone.py
backend/app/routers/: __init__.py  chat.py  devices.py  predictions.py  sensors.py  websocket.py  zones.py
backend/app/schemas/: __init__.py  device.py  prediction.py  sensor.py  zone.py
backend/app/services/: __init__.py  device_discovery.py  prediction_engine.py  simulator.py
frontend/: Dockerfile  index.html  package.json  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/charts/: TemperatureChart.tsx
frontend/src/components/chat/: ChatBot.tsx
frontend/src/components/dashboard/: AlertFeed.tsx  DeviceStatusBadge.tsx  FCUControlPanel.tsx  SensorCard.tsx  ZonePanel.tsx
frontend/src/components/layout/: Header.tsx
frontend/src/components/ui/: card.tsx  slider.tsx  switch.tsx  toast.tsx
frontend/src/hooks/: useWebSocket.ts
frontend/src/lib/: api.ts
