[project]
name = "smart-fcu-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "fastapi>=0.128.0",
    "numpy>=2.4.1",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.22",
    "scikit-learn>=1.8.0",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.40.0",
    "websockets>=16.0",
]
